--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ opencv-python==4.10.0.84
 ipykernel==6.29.5
 scikit-image==0.21.0
 scikit-learn==1.3.2
+torch==2.4.1
+torchvision>=0.13.0
+pycocotools==2.0.7
